2003-10-13  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* exp/expression.h :
	* exp/comp_atom.h :
	* exp/gnd_atom.h :
	
	  - Added some convenience macros.
	  
	* exp/comp_exp.c : 
	* exp/gnd_exp.c :
	* parser/parser.y :

	  - Used convenience macros.

2002-10-12  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* exp/gnd_exp.c :

	  - Separated eval atoms (holds, memb and subst) into
	    separate functions.

	* exp/comp_atom.c :
	* exp/comp_atom.h :
	* exp/comp_exp.c :
	* exp/gnd_atom.c :
	* exp/gnd_atom.h :
	* exp/gnd_exp.c :

	  - Changed create atom functions so that they do not malloc. They
	    now assume that space is always available.

	  - Added a macro to malloc.
	
	* parser/parser.y :

	  - Some cleanups. Now uses the create atom functions instead of
	    manually assigning values to each structure member.

2002-10-07  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* datastruct/simplelist.c :
	* datastruct/simplelist.h :
	* datastruct/stringlist.c :
	* datastruct/stringlist.h :
	* exp/comp_atom.c :
	* exp/comp_atom.h :
	* exp/comp_exp.c :
	* exp/gnd_atom.c :
	* exp/gnd_atom.h :
	* exp/gnd_exp.c :
	* exp/name.c :
	* exp/name.h :
	* ident/ident.c :
	* ident/ident.h :
	* ident/identlist.c :
	* ident/symtab.c :
	* parser/parser.y :
	* trans/transdef.c :
	* trans/transdef.h :
	* trans/translist.c :
	* trans/transref.c :
	* trans/transref.h :
	* trans/transtab.c :

	  - Changed destroy function to return void. If free()
	    fails, it will segfault anyway.

	  - Changed purge functions to return void. In all cases
	    we do not care if this succeeds or not.

	  - Changed init function to return void. It cannot fail 
	    anyway.

	  - Changed length function to return the length
	    instead of passing it through a variable reference


	* ident/symtab.c :
	* trans/transtab.c :

	  - Changed internal lists to static.

2002-10-04  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* VERSION :
	* main/epilog.c :

	  - Updated version to 0.9.0.

	* main/Makefile :
